force-app/main/default/objects/Budget__c/fields/Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Spend__c</fullName>
    <label>Current Spend</label>
    <summarizedField>Purchase__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Purchase__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>