force-app/main/default/objects/Budget__c/fields/Is_within_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_within_Budget__c</fullName>
    <formula>Total_Budget__c &gt;=  Current_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is within Budget</label>
    <type>Checkbox</type>
</CustomField>