force-app/main/default/objects/Budget__c/fields/Percentage_Spent__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Spent__c</fullName>
    <formula>Current_Spend__c / Total_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>